--- a/Expenses-Analyzer/Expenses-Analyzer/wwwroot/css/site.css
+++ b/Expenses-Analyzer/Expenses-Analyzer/wwwroot/css/site.css
@@ -15,6 +15,11 @@ html {
 html {
   position: relative;
   min-height: 100%;
+  font-family: "Inter";
+}
+
+*:not(.fa-solid):not(.fa):not(.e-icons) {
+    font-family: "Inter";
 }
 
 body {
@@ -25,6 +30,36 @@ body {
 
 .e-bigger {
     font-size: x-large;
+}
+
+/*Button*/
+.btn:focus, .btn:active{
+    outline:none !important;
+    box-shadow:none;
+}
+
+/*HyperLink*/
+.no-a-decoration, no-a-decoration:hover {
+    text-decoration: none;
+    color: inherit;
+}
+
+/*Grid*/
+.e-grid {
+    border: 0;
+    border-radius: 5px;
+}
+
+.e-grid .e-gridcontent, .e-grid .e-table {
+    background-color: #1a222b;
+}
+
+.e-grid .e-gridheader {
+    border: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    padding: 10px;
+    background-color: #222b33;
 }
 
 /* Radio button group */
@@ -47,4 +82,10 @@ body {
     border: 1px solid #fff;
     background-color: #fff;
     color: #212b36;
+}
+
+/*Widget*/
+.widget {
+    border-radius: 1rem;
+    background-color: #1a222b;
 }
