--- a/Expenses-Analyzer/Expenses-Analyzer/Views/Category/Index.cshtml
+++ b/Expenses-Analyzer/Expenses-Analyzer/Views/Category/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model IEnumerable<Expenses_Analyzer.Models.Category>
-
 @{
-    ViewData["Title"] = "Index";
+    ViewData["PageTitle"] = "Categories";
+    ViewData["PageActionText"] = "+ New Category";
+    ViewData["PageActionUrl"] = "/Category/Create";
 }
 
 <div class="row">
