--- a/Expenses-Analyzer/Expenses-Analyzer/Views/Transaction/Create.cshtml
+++ b/Expenses-Analyzer/Expenses-Analyzer/Views/Transaction/Create.cshtml
@@ -4,10 +4,6 @@
     ViewData["PageTitle"] = Model.TransactionId == 0 ? "Create a new Transaction" : "Edit Transaction";
 }
 
-<h1>Create</h1>
-
-<h4>Transaction</h4>
-<hr />
 <div class="row">
     <div class="col-md-7">
         <div class="widget p-5" style="background-color: #212b36">
@@ -22,14 +18,14 @@
                     <ejs-dropdownlist id="ddlCategory" ejs-for="CategoryId" dataSource="@ViewBag.Categories" placeholder="Category" floatLabelType="Always" allowFiltering="true" ignoreAccent="true" filterType="Contains" popupHeight="220px">
                         <e-dropdownlist-fields value="CategoryId" text="TitleWithIcon"></e-dropdownlist-fields>
                     </ejs-dropdownlist>
+                    <span asp-validation-for="CategoryId" class="text-danger fs-6"></span>
                 </div>
                 <div class="mb-3">
                     <ejs-numerictextbox id="amount" ejs-for="Amount" placeholder="Amount" floatLabelType="Always" min="0" format="c0"></ejs-numerictextbox>
-                    <span asp-validation-for="Amount" class="text-danger"></span>
+                    <span asp-validation-for="Amount" class="text-danger fs-6"></span>
                 </div>
                 <div class="mb-3">
                     <ejs-textbox id="title" placeholder="Note" ejs-for="Note" floatLabelType="Always" multiline="true"></ejs-textbox>
-                    <span asp-validation-for="Note" class="text-danger"></span>
                 </div>
                 
                 <ejs-button id="submit" type="submit" content="Submit" cssClass="e-success"></ejs-button>
@@ -43,10 +39,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
-
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
