--- a/Expenses-Analyzer/Expenses-Analyzer/Views/Dashboard/Index.cshtml
+++ b/Expenses-Analyzer/Expenses-Analyzer/Views/Dashboard/Index.cshtml
@@ -94,3 +94,23 @@
         </div>
     </div>
 </div>
+
+@*Recent Transactions and More*@
+<div class="row">
+    <div class="col-md-6">
+        <div class="widget">
+            <div class="p-4">
+                <h5 class="fw-bold">Recent Transactions</h5>
+            </div>
+            <div class="px-4 pb-4">
+                <ejs-grid id="recent-transactions" dataSource="@ViewBag.RecentTransactions" gridLines="None">
+                    <e-grid-columns>
+                        <e-grid-column headerText="Category" field="CategoryTitleWithIcon"></e-grid-column>
+                        <e-grid-column headerText="Date" field="Date" width="110px" template="#typeColumnTemplate" width="150px" type="date" format="MMM-dd-yy" textAlign="Left"></e-grid-column>
+                        <e-grid-column headerText="Amount" field="FormattedAmount" width="110px" template="#typeColumnTemplate" width="150px" textAlign="Right"></e-grid-column>
+                    </e-grid-columns>
+                </ejs-grid>
+            </div>
+        </div>
+    </div>
+</div>
