--- a/Expenses-Analyzer/Expenses-Analyzer/Views/Shared/_SideBar.cshtml
+++ b/Expenses-Analyzer/Expenses-Analyzer/Views/Shared/_SideBar.cshtml
@@ -12,19 +12,19 @@
     menuItems.Add(new
     {
         text = "Dashboard",
-        Url = "/",
+        url = "/",
         iconCss = "fa-solid fa-box"
     });
     menuItems.Add(new
     {
         text = "Categories",
-        Url = "/Category",
+        url = "/Category",
         iconCss = "fa-solid fa-folder-closed"
     });
     menuItems.Add(new
     {
         text = "Transactions",
-        Url = "/Transaction",
+        url = "/Transaction",
         iconCss = "fa-solid fa-arrow-right-arrow-left"
     });
 
@@ -36,13 +36,13 @@
     menuItems.Add(new
     {
         text = "Reports",
-        Url = "#",
+        url = "#",
         iconCss = "fa-solid fa-chart-simple"
     });
     menuItems.Add(new
     {
         text = "Settings",
-        Url = "#",
+        url = "#",
         iconCss = "fa-solid fa-gear"
     });
 }
