--- a/Expenses-Analyzer/Expenses-Analyzer/Views/Transaction/Index.cshtml
+++ b/Expenses-Analyzer/Expenses-Analyzer/Views/Transaction/Index.cshtml
@@ -12,8 +12,8 @@
             <e-grid-pagesettings pageSize="10"></e-grid-pagesettings>
             <e-grid-columns>
                 <e-grid-column headerText="Category" field="CategoryTitleWithIcon"></e-grid-column>
-                <e-grid-column headerText="Date" field="Date" width="110px" template="#typeColumnTemplate" width="150px" type="date" format="MMM-dd-yy" textAlign="Left"></e-grid-column>
-                <e-grid-column headerText="Amount" field="FormattedAmount" width="110px" template="#typeColumnTemplate" width="150px" textAlign="Right"></e-grid-column>
+                <e-grid-column headerText="Date" field="Date" width="110px" width="150px" type="date" format="MMM-dd-yy" textAlign="Left"></e-grid-column>
+                <e-grid-column headerText="Amount" field="FormattedAmount" width="110px" width="150px" textAlign="Right"></e-grid-column>
                 <e-grid-column headerText="Actions" template="#actionColumnTemplate" width="100px"></e-grid-column>
             </e-grid-columns>
         </ejs-grid>
